--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.12",
     "passport": "^0.5.2",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "pm2": "^5.2.0"
   },
   "engines": {
     "node": "16.13.0"
