--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.12",
